--- a/views/forget_username.handlebars
+++ b/views/forget_username.handlebars
@@ -64,7 +64,7 @@
 
     <h1 class="my-5 mx-auto text-center">Recover your username</h1>
 
-    <div class="container">
+    <div id='loginbox' class="container">
         <form id="user_name-recovery">
             <div class="form-group">
                 <label for='email'>Please enter your email address below.</label>
