--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -119,10 +119,26 @@
         text-align: left !important;
     }
     
+   #loginbox {
+       width: 540px
+   }
 
  @media screen and (max-width: 600px) {
-     input {
+     #loginbox {
          width: 100% !important;
+     }
+     .navbar-brand {
+         font-size: 25px !important;
+     }
+
+     h1 {
+         font-size: 25px !important;
+     }
+     label {
+         font-size: 14px !important;
+     }
+     .reset {
+         font-size: 10px !important;
      }
 }
 </style>
