--- a/views/trade.handlebars
+++ b/views/trade.handlebars
@@ -16,7 +16,7 @@
         <div class="container my-5 " id='welcome'>
             
             <h1 class="text-center"> Place an order</h1>
-            <div class='text-right h5 text-success' id='balance'>Cash Available: {{balance}}</div>
+            <p class='text-right text-success' id='balance'>Cash Available: {{balance}}</p>
             <form id='trade-form' class='my-3'>
                 <div class="form-group">
                     <label for="formGroupExampleInput">Ticker</label>
