fixed css for password change

--- a/views/reset.handlebars
+++ b/views/reset.handlebars
@@ -39,7 +39,7 @@
 
     <h1 class="my-5 mx-auto text-center">Change your password</h1>
 
-    <div class="container col-4">
+    <div id='loginbox' class="container">
         <form id="user_name-recovery">
             <div class="form-group">
                 <label for='username'>Enter your username</label>
