added error handler for sql connection and animations for login and dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -24,7 +24,7 @@
         <p class="text-center my-5 h4">Choose your path:</p>
 
 
-        <div class=" text-center my-3 animated pulse fast">
+        <div class=" text-center my-3 animated fadeIn fast">
             <a href="https://www.cnbc.com"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-info text-center dash-button shadow-lg">News</button></a>
             <a href="/portfolio"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-primary text-center dash-button shadow-lg">Portfolio</button></a>
             <a href="/history"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-secondary text-center dash-button shadow-lg">History</button></a>
@@ -73,7 +73,7 @@
                     $("#logout").append(`<span class="spinner-border spinner-border-sm my-1" role="status" aria-hidden="true"></span>`)
                     setTimeout(() => {
                         window.location = 'login'
-                    }, 3000);
+                    }, 1500);
                 }
             })
         })
