added a ninja dispoal button

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -36,9 +36,9 @@
         <div class="text-center my-5">
             <a href="/contact"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-transparent text-center dash-button">Contact Us</button></a>
 
-            <button id='logout' style='width: 150px; height:100px' class="btn my-1 btn-transparent mx-2">Ninja Out
-                
-            </button>
+            <button id='logout' style='width: 150px; height:100px' class="btn my-1 btn-transparent mx-2">Ninja Out</button>
+            <button id='disposal' style='width: 150px; height:100px' class="btn my-1 btn-transparent mx-2">Ninja Disposal</button>
+
         </div>
            
 
