added window location

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -90,6 +90,7 @@
                     console.log(results);
                     if (results === "Ninja disposed!") {
                         alert("Your Trade Ninja account has been successfully deleted.");
+                        window.location = 'login';
                     }
                 })
             } else {
