got rid of the alert-success

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -252,7 +252,7 @@
                         $("#password-alert").empty();
                         $("#username-alert").empty();
 
-                        $("#alert-space").html(`<div class="alert alert-success alert-transparent" role="alert">${results}</div>`);
+                        $("#alert-space").html(`<div class="alert text-warning alert-transparent" role="alert">${results}</div>`);
                         setTimeout(() => {
                             $("#alert-space").empty();
                             window.location = "login"
