changed color css.(bg, green)

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -145,9 +145,9 @@
                     }
 
                     if (results === "Login Successful!") {
-
+                        $("#submit").css("background-color", "green");
                         $("#submit").append(`<span class="spinner-border spinner-border-sm m-1" role="status" aria-hidden="true"></span>`)
-                        {{!-- $("#submit").style.backgroundColor = "green"; --}}
+
                         setTimeout(() => {
                             $("body").addClass("animated fadeOutLeft");
                             setTimeout(() => {
