--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,10 @@
         background-color: green !important;
     }
 
-    #submit,
+    #submit {
+        background-color: darkred;
+        border-color: darkred;
+    }
     #ninja-cash {
         background-color: darkred !important;
         border-color: darkred !important;
