--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -80,7 +80,7 @@
                     <a class='reset float-left' href="./forget_username">Forgot Username?</a>
                     <a class='reset float-right' href="./forget_password">Password Reset</a>
                 </div>
-                <button style="width: 100%" id='submit' type="submit" class="btn my-4">Ninja Log</button>
+                <button style="width: 100%" id='submit' type="submit" class="btn text-white my-4">Ninja Log</button>
             </form>
 
             <div id="alert-space" class="text-center my-3">
@@ -145,7 +145,7 @@
                     }
 
                     if (results === "Login Successful!") {
-                        $("#submit").addClass("btn-success");
+                        $("#submit").css("background-color", "green");
                         $("#submit").append(`<span class="spinner-border spinner-border-sm m-1" role="status" aria-hidden="true"></span>`)
 
                         setTimeout(() => {
