--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -145,6 +145,7 @@
                     }
 
                     if (results === "Login Successful!") {
+                        $(".navbar-brand").css("background-color", "mediumseagreen");
                         $("#submit").css("background-color", "mediumseagreen");
                         $("#submit").append(`<span class="spinner-border spinner-border-sm m-1" role="status" aria-hidden="true"></span>`)
 
