--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,9 +27,9 @@
     }
 
     .navbar-brand {
-        color: red;
+        color: red !important;
         font-family: 'Righteous', cursive;
-        font-size: 28px ;
+        font-size: 28px !important;
     }
 
     .btn-dark {
