--- a/views/forget_password.handlebars
+++ b/views/forget_password.handlebars
@@ -97,7 +97,7 @@
 
         $("#submit").on("click", event => {
             event.preventDefault();
-            let email = $("#email").val();
+            let email = $("#email").val().trim();
 
 
             let data = {
