css for login and register

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -145,7 +145,7 @@
                     }
 
                     if (results === "Login Successful!") {
-                        $(".navbar-brand").css("color", "mediumseagreen !important");
+                        $(".navbar-brand").addClass("text-success");
                         $("#submit").css("background-color", "mediumseagreen");
                         $("#submit").append(`<span class="spinner-border spinner-border-sm m-1" role="status" aria-hidden="true"></span>`)
 
