--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -251,7 +251,7 @@
                         $("#form-alert").empty();
                         $("#password-alert").empty();
                         $("#username-alert").empty();
-
+                        $("#submit").css("background-color", "mediumseagreen")
                         $("#alert-space").html(`<div class="alert text-center text-warning alert-transparent" role="alert">${results}</div>`);
                         setTimeout(() => {
                             $("#alert-space").empty();
