--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -150,7 +150,7 @@
                         $("#submit").append(`<span class="spinner-border spinner-border-sm m-1" role="status" aria-hidden="true"></span>`)
 
                         setTimeout(() => {
-                            $("body").addClass("animated fadeOutLeft");
+                            $("body").addClass("animated fadeOut");
                             setTimeout(() => {
                                 window.location = "/dashboard";
 
