spinner for password_reset

--- a/views/forget_password.handlebars
+++ b/views/forget_password.handlebars
@@ -97,6 +97,7 @@
 
         $("#submit").on("click", event => {
             event.preventDefault();
+            $("#sumbit").append(`<span class="spinner-border spinner-border-sm m-1" role="status" aria-hidden="true"></span>`)
             let email = $("#email").val().trim();
 
 
@@ -116,6 +117,7 @@
                 console.log(results)
 
                 if (results === "Email not found") {
+                    $(".spinner-border").empty()
                     $("#alert-space").html(`<div class="alert alert-transparent text-warning" role="alert">Please enter a valid email.</div>`);
                     setTimeout(() => {
                         $("#alert-space").empty();
@@ -125,7 +127,7 @@
 
 
                 if (results === "Email success!") {
-
+                    $(".spinner-border").empty()
                     $("#alert-space").html(`<div class="alert alert-transparent text-success" role="alert">Your username was sent to your email.</div>`)
                     setTimeout(() => {
                         window.location = "/login"
