--- a/views/reset.handlebars
+++ b/views/reset.handlebars
@@ -43,19 +43,19 @@
         <form id="user_name-recovery">
             <div class="form-group">
                 <label for='username'>Enter your username</label>
-                <input type="text" class="form-control" id="username">
+                <input type="text" required class="form-control" id="username">
             </div>
             <div class="form-group">
                 <label for='pin'>Enter PIN</label>
-                <input type="text" class="form-control" id="pin">
+                <input type="text" required class="form-control" id="pin">
             </div>
             <div class="form-group">
                 <label for='password1'>New password</label>
-                <input type="password" class="form-control" id="password1">
+                <input type="password" required class="form-control" id="password1">
             </div>
             <div class="form-group">
                 <label for='password2'>Confirm password</label>
-                <input type="password" class="form-control" id="password2">
+                <input type="password" required class="form-control" id="password2">
             </div>
 
             <button style="width: 100%" id='submit' type="submit" class="btn btn-primary my-4">Ninja Recover</button>
