target = blank for news link

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -25,7 +25,7 @@
 
 
         <div class=" text-center my-3 animated fadeIn fast">
-            <a href="https://www.cnbc.com"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-info text-center dash-button shadow-lg">News</button></a>
+            <a href="https://www.cnbc.com" target="_blank"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-info text-center dash-button shadow-lg">News</button></a>
             <a href="/portfolio"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-primary text-center dash-button shadow-lg">Portfolio</button></a>
             <a href="/history"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-secondary text-center dash-button shadow-lg">History</button></a>
             <a href="/cash"><button style='width: 150px; height:100px' class="btn mx-2 my-1 btn-warning text-center dash-button shadow-lg">Cash</button></a>
